--- a/WEB/css/loading-bar/loading-tire.html
+++ b/WEB/css/loading-bar/loading-tire.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loading Tire</title>
+    <title>LOADING TIRE</title>
     <style>
       * {
         padding: 0px;
