--- a/WEB/css/flex/flex-loading.html
+++ b/WEB/css/flex/flex-loading.html
@@ -16,7 +16,7 @@
         <div class="loading-rect"></div>
         <div class="loading-ellipse-1"></div>
         <div class="loading-ellipse-2"></div>
-        <p>LOADING</p>
+        <div class="loading-text">LOADING</div>
       </div>
     </div>
   </body>
