--- a/WEB/css/loading-bar/loading-tire.html
+++ b/WEB/css/loading-bar/loading-tire.html
@@ -28,8 +28,8 @@
       }
 
       .loading-box > .loading-rect {
-        border: 3px solid orange;
-        border-top: 3px solid #9d9d9d;
+        border-bottom: 3px solid orange;
+        border-top: 3px solid orange;
         width: 100px;
         height: 100px;
         top: 50%;
